# -Study

LevelsSystem/: CMakeLists.txt  Person.cpp  Person.h  Readme.md  Room.cpp  Room.h  main.cpp
Taxi/: Admin.cpp  AdminGateway.h  CMakeLists.txt  Car.cpp  Car.h  Driver.h  DriverGateway.cpp  Gateway.cpp  Gateway.h  Passenger.cpp  PassengerGateway.h
